fix: overflow css scroll issue

--- a/packages/experimental/src/components/Notifications/_notifications.scss
+++ b/packages/experimental/src/components/Notifications/_notifications.scss
@@ -52,7 +52,7 @@
   max-width: 22.75rem;
   min-height: 38.5rem;
   max-height: 38.5rem;
-  overflow: scroll;
+  overflow: auto;
   color: $text-01;
   background-color: $ui-background;
   // stylelint-disable-next-line carbon/motion-token-use
